# Vega2.0

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  ADAPTIVE_FL_SUMMARY.md  AMBIENT_SYSTEM_GUIDE.md  AUTONOMOUS_DEBUG_README.md  DEVELOPMENT_ROADMAP.md  DIRECTORY_STRUCTURE.md  Dockerfile  FOLDER_STRUCTURE.md  MINDMAP_STRUCTURE.md  MULTIMODAL_PHASE4_SUMMARY.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_TUNING.md  README.md  README_OLD.md  README_UPDATED.md  REAL_IMPROVEMENTS.md  SESSION_SUMMARY.md  STRESS_TEST_RESULTS.md  UI_README.md  VOICE_TRAINING_START_HERE.md  __init__.py  app.py  architecture.html  autonomous_master.py  check_training_setup.sh  cli.py  datasets.html  demo_enhanced_document_processing.py  demo_enterprise_api_management.py  demo_multimodal.py  demo_multimodal_workspace.py  demo_vector_database.py  dependencies.html  deployment.html  docker-compose.yml  extreme_stress_test.py  (+43 more)
.frogbot/: frogbot-config.yml
.github/: copilot-instructions.md
alerting/: alert-rules.yml  alertmanager.yml
analysis/: __init__.py  conversation_integration.py
autonomous_debug/: code_evolver.py  code_sandbox.py  daemon_config.json  error_index.db  error_tracker.py  evolution.db  fix_suggestions.db  patches.db  patterns.db  plugin_generator.py  requirements.txt  self_debugger.py  validation_results.db  web_solutions.db
benchmarks/: README.md  benchmark.py
book/: book.toml
config/: .pre-commit-config.yaml  __init__.py  adaptive_federated.yaml  app.yaml  federated_pruning.yaml  harm_filter.yaml  llm.yaml  participants.yaml  pruning_presets.yaml  sso_config.json  ui.yaml
configs/: .env.example  adaptive_presets.yaml  demo_vector_config.py  security.yaml  voice.yaml
core/: DEV_NOTES.md  __init__.py  app.py  cli.py  config.py  config_manager.py  db.py  ecc_crypto.py  error_middleware.py  exceptions.py  llm.py  llm_backup.py  llm_enhanced.py  logging_setup.py  process_manager.py  recovery_manager.py  security.py
data/: app.env  evaluations.db  feature_usage.json  file_analyses.json  knowledge_graph.db  project_intelligence.json  project_manifest.json  self_improvement.db  skill_registry.db  telemetry.db  variants.db  vector_index.faiss  vega.db  vega_knowledge.json  vega_memory.db  vega_server.pid
datasets/: advanced_nlp.py  audio_fingerprint.py  audio_utils.py  computer_vision.py  document_processor.py  document_structure.py  image_analysis.py  image_utils.py  prepare_dataset.py  speaker_id.py  speech_to_text.py  test_audio_fingerprint.py  test_audio_utils.py  test_computer_vision.py  test_image_analysis.py  test_image_utils.py  test_speech_to_text.py  test_video_analysis.py  test_video_processing.py  test_video_processing_old.py  text_extraction.py  video_analysis.py  video_processing.py  video_processing_old.py
demos/: demo_clip_advanced.py  demo_enhanced_document_processing.py  demo_focus_tracker.py  demo_multimodal_collaboration.py  demo_persistent_chat.py
docs/: ADVANCED_PERFORMANCE_SYSTEMS.md  AMBIENT_SYSTEM_GUIDE.md  AUTONOMOUS_AI_SYSTEM_COMPLETE.md  COMMANDS.md  COMPLETE_SESSION_SUMMARY.md  DAEMON-SYSTEM.md  DASHBOARD.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_FIX_SUMMARY_V2.md  DASHBOARD_QUICK_START.md  DASHBOARD_SETUP_COMPLETE.md  DASHBOARD_SOLUTION.md  DASHBOARD_SUMMARY.md  DATASETS.md  DEPENDENCIES.md  DEPLOYMENT.md  FILES_OVERVIEW.md  FOCUS-TRACKING.md  HOME_ASSISTANT_VOICE_INTEGRATION.md  MAINTENANCE.md  NETWORK_ACCESS_GUIDE.md  NETWORK_SETUP_SUMMARY.md  NEW_FILES_LIST.md  OPENAPI_MIGRATION.md  PERSISTENT_CHAT_QUICKREF.md  PERSISTENT_MODE_GUIDE.md  PERSISTENT_MODE_REFERENCE.txt  PERSISTENT_MODE_SOLUTION.md  PERSISTENT_MODE_SUMMARY.md  PROJECT_IMPROVEMENT_ROADMAP.md  QUICK_REFERENCE_CARD.md  README.md  README_DASHBOARD.md  SESSION_SUMMARY.md  SETUP.md  TESTING_QUICK_REFERENCE.md  TEST_SUITE_STATUS.md  TRAINING_COMPLETE.md  TRAINING_MODES.md  TRAINING_QUICK_REFERENCE.md  (+9 more)
engine/: advanced_augmentations.py  idle_personality_engine.py  spontaneous_thought_engine.py
integrations/: __init__.py  fetch.py  osint.py  search.py  slack_connector.py
(+1036 files in other folders)
