[project]
name = "vega2"
version = "2.0.0"
description = "Advanced AI platform with federated learning and multi-modal processing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Vega Team"}
]
keywords = ["ai", "llm", "federated-learning", "multi-modal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "datasets*", "vega_state*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = [
    "-v",
    "--tb=short",
    "-x",
]

[tool.pyright]
include = ["src", "tests", "datasets", "vega_state"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "**/.pytest_cache",
    "**/build",
    "**/dist"
]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = "warning"
extraPaths = ["."]
venvPath = "."
venv = ".venv"

[tool.pylint.main]
py-version = "3.12"
init-hook = "import sys; sys.path.insert(0, '.')"
ignore = ["__pycache__", ".venv", "build", "dist", ".pytest_cache"]

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0602",  # global-variable-not-assigned
    "W0603",  # global-statement
    "W0611",  # unused-import
    "W0612",  # unused-variable
    "W1309",  # f-string-without-interpolation
    "E0401",  # import-error
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "W0718",  # broad-exception-caught
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-public-methods = 25

[tool.pylint.imports]
known-first-party = ["src", "vega", "datasets", "vega_state"]

[tool.pylint.typecheck]
ignored-modules = [
    "torch",
    "tensorflow", 
    "transformers",
    "accelerate",
    "peft",
    "cv2",
    "librosa",
    "faiss",
    "whisper",
    "httpx",
    "fastapi",
    "uvicorn"
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "B905",  # zip without strict
    "W605",  # invalid escape sequence
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["B011", "B017"]  # assert and raise in tests

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
/(
    __pycache__
    | \.venv
    | build
    | dist
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src", "vega", "datasets", "vega_state"]
skip = ["__pycache__", ".venv", "build", "dist"]
